# cjm-graph-domains

./: README.md  core.html  core.html.md  index.html  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml
cjm_graph_domains/: _modidx.py  core.py
cjm_graph_domains/domains/: knowledge.py  relations.py  structure.py
domains/: knowledge.html  knowledge.html.md  relations.html  relations.html.md  structure.html  structure.html.md
nbs/: core.ipynb  index.ipynb  nbdev.yml
nbs/domains/: knowledge.ipynb  relations.ipynb  structure.ipynb
tests_manual/: test_domains.py  test_structure_domain.py
